2025-03-07  Karl Berry  <karl@tug.org>

	* TL'25 release.

2024-10-13  <user202729@protonmail.com>

	* synctex_record_node_kern: pass "kern" instead of "glue"
	as SYNCTEX_TAG_MODEL and SYNCTEX_LINE_MODEL.
	https://tug.org/pipermail/luatex/2024-September/008006.html

	Forwarded by Luigi, confirmed by Jerome, committed by Karl.
	Jerome adds:
           This bug only affects engines for which kern node and glue
           nodes do not have the same size, aka none.
           The kern problem is well known for luatex since a long time but
           it does not affect other engines. While this patch is necessary
           to make the synctex code cleaner, it does not change anything
           for the engines concerned by the code.

2024-04-14  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* am/synctex.am: Remove eptex.

2024-03-10  Karl Berry  <karl@tug.org>

	* TL'24 release.

2023-08-27  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* synctex.test: Make easier to test on Windows.

2023-03-09  Karl Berry  <karl@tug.org>

	* TL'23 release.

2023-02-23  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	Sync with GH 2020 branch.

	  * Changed files (on https://github.com/jlaurens/synctex):
	    synctex_parser.c
	    synctex_parser_utils.c
	    synctex_parser_utils.h

	  - Fix compilation on MSVC.
	    https://github.com/jlaurens/synctex/pull/59
	  - Fix some GCC warnings.
	    https://github.com/jlaurens/synctex/pull/57

2023-01-19  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	Comparing TL r55094 (by JL) and GH 2020 branch.

	  * Changed files (on https://github.com/jlaurens/synctex):
	    synctex_main.c
	    synctex_parser.c
	    synctex_parser_readme.md
	    synctex_parser_utils.c

	  - Fix compilation with clang with -Wformat-nonliteral.
	    https://github.com/jlaurens/synctex/pull/38
	  - Fix build when compiling with -Werror=implicit-function-declaration.
	    https://github.com/jlaurens/synctex/pull/39
	  - More explanations.